Migrate aws sdk (#927)
* Migrate aws sdk to 2.x